@@ -1,4 +1,5 @@
 3 Feb 2018
+add: redirect to login on no session
 update: sql files
 
 2 Feb 2018
